# fhir-schema-migration-tool

./: Cargo.toml  LICENSE-MIT  README.md  preptest
src/: attribute.rs  builtin.rs  main.rs  resource_map.rs  search_param.rs  trie.rs
src/attribute/: aidbox.rs  typed.rs
src/search_param/: fhir.rs
src/trie/: extension_separated.rs  fhir.rs  inverted.rs  path.rs  raw.rs
tests/badattr/aidbox/: badtype.json  extrafield.json
tests/badattr/typed/: badentity.yaml  badkind.yaml  badvalueset.yaml  modifier.yaml  order.yaml  schema.yaml  summary.yaml  unique.yaml
tests/malformed/json/: test.json
